--- a/Documentación/main.tex
+++ b/Documentación/main.tex
@@ -88,32 +88,83 @@ Finalmente, respecto al “muestreo del entorno continuo”, muestrear \(x(t)\) 
 
 % =========================
 \section{Experimento 1: FFT sobre audio libre}
-% Esta sección cubre la parte 2 (implementación FFT sobre audio libre) EN RESULTADOS,
-% sin incluir código: solo describe datos, método, y muestra/analiza figuras.
+
 \subsection{Datos y preparación}
-% - Fuente del audio (licencia libre, citar en referencias).
-% - Duración, tasa de muestreo, preprocesamiento (mono, normalización).
+
+Se utilizó una pista de audio libre en formato WAV con frecuencia de muestreo \(f_s=44{,}100\) Hz. Del audio completo se seleccionó el tramo de \(t\in[8,\,20.7]\) s, de duración efectiva \(T\approx 12.696\) s, convertido a mono por promediado de canales y normalizado a \([-1,1]\) antes del análisis. Este preprocesamiento evita sesgos de escala y asegura que la potencia esté acotada para una interpretación coherente de magnitud y fase en la FFT \cite{OppenheimSchaferDTSP3e}.  
+
+La lectura del WAV se realizó con una rutina estándar que ignora metadatos no audio (advertencia \emph{Chunk (non-data) not understood}), lo cual no afecta las muestras útiles. El objetivo del experimento es estimar el espectro de magnitud \(|X(f)|\) y la fase \(\angle X(f)\) de una señal compuesta por dos senoidales muy cercanas en frecuencia, un caso clásico para estudiar resolución en frecuencia, batido temporal y fuga espectral \cite{oppenheim2010}.
+
 \subsubsection{Configuración de análisis}
-% - Ventana usada (o sin ventana), N de la FFT, zero-padding (si se usó).
-% - Justificación de elecciones (ruido/armónicos/estacionariedad).
+
+Se empleó una ventana de Hann sobre el segmento seleccionado. La elección de Hann ofrece un buen compromiso entre atenuación de lóbulos laterales y ensanchamiento del lóbulo principal, lo que mitiga la fuga espectral sin degradar en exceso la separabilidad de líneas cercanas \cite{Harris1978Windows}.  
+
+Con el tramo elegido se obtuvo un tamaño base para la FFT de \(N_{\text{base}}=912{,}712\) muestras, lo que implica una resolución física en frecuencia
+\[
+\Delta f \;=\; \frac{f_s}{N_{\text{base}}} \;\approx\; \frac{44{,}100}{912{,}712}\;\approx\;0.0483\ \text{Hz}.
+\]
+Para las figuras presentadas no se aplicó \emph{zero padding} adicional (\(\text{zp}\times1\)), de modo que la rejilla de frecuencias coincide con \(\Delta f\) física. Se recuerda que el \emph{zero padding} sólo densifica la rejilla de muestreo en frecuencia pero no mejora la resolución física, que sigue estando gobernada por \(N_{\text{base}}\) \cite{OppenheimSchaferDTSP3e}.  
+
+En una pareja de tonos separados por un centésimo de semitono musical, la separación esperada es
+\[
+\Delta f_{\text{cent}} \;\approx\; f_0\big(2^{1/1200}-1\big),
+\]
+que para \(f_0\approx 261\) Hz da \(\Delta f_{\text{cent}}\approx 0.15\) Hz. El batido en tiempo tiene periodo aproximado \(T_{\text{beat}}\approx 1/\Delta f\), por lo que se espera observar una envolvente lenta en el dominio temporal \cite{CooleyTukey1965}.
+
 \subsection{Resultados espectrales}
-% - Insertar figuras de magnitud y fase (exportadas por el script).
+
+La Figura~\ref{fig:exp1-waveform} muestra la forma de onda del segmento analizado. Se aprecia una envolvente lenta de batido, consistente con la superposición de dos senoidales muy próximas y con el valor esperado de \(T_{\text{beat}}\) a partir de la separación en frecuencia \(\Delta f\) \cite{OppenheimSchaferDTSP3e}.  
+
+% ======= FIGURAS (manteniendo rutas y nombres provistos) =======
+
+% ===== Figura 1 =====
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.95\linewidth]{figs/fft_magnitud_audio.png} % <-- reemplaza con tu PNG
-  \caption{Espectro de magnitud $\lvert X(f)\rvert$ de la pista analizada.}
-  \label{fig:fft-mag-audio}
+  \includegraphics[width=0.98\linewidth]{Media/Figura1.png}
+  \caption{Forma de onda del segmento analizado con \(f_s=44.1\) kHz. Se observa una envolvente de batido producida por dos componentes senoidales muy cercanas en frecuencia. El fenómeno temporal es consistente con la separación en frecuencia que se confirma en el dominio espectral.}
+  \label{fig:exp1-waveform}
 \end{figure}
+
+En la Figura~\ref{fig:exp1-mag-full} se observa un pico dominante alrededor de \(261\) Hz y componentes en \(\sim131\) Hz y \(\sim524\) Hz, consistentes con relación de octavas del material analizado. La energía fuera de esas vecindades cae de forma marcada gracias al uso de ventana de Hann, que atenúa la fuga espectral al reducir los lóbulos laterales respecto de una ventana rectangular, aunque a costa de un lóbulo principal algo más ancho \cite{Harris1978Windows,OppenheimSchaferDTSP3e}. El tamaño base \(N_{\text{base}}=912{,}712\) con \(f_s=44{,}100\) Hz fija una resolución física \(\Delta f \approx 0.0483\) Hz, suficiente para evidenciar la estrechez tonal global sin confundirla con el ruido de fondo numérico \cite{OppenheimSchaferDTSP3e,VetterliKovacevicGoyalFSP2014}.
+% ===== Figura 2 =====
 \begin{figure}[H]
   \centering
-  \includegraphics[width=0.95\linewidth]{figs/fft_fase_audio.png} % <-- reemplaza con tu PNG
-  \caption{Espectro de fase $\angle X(f)$ de la pista analizada.}
-  \label{fig:fft-fase-audio}
+  \includegraphics[width=0.98\linewidth]{Media/Figura2.png}
+  \caption{Espectro de magnitud en banda completa \((0\)–\(f_s/2)\) con ventana de Hann. Se distinguen la fundamental alrededor de \(261\) Hz y octavas cercanas a \(131\) Hz y \(524\) Hz. El ventaneado reduce la fuga espectral y permite identificar los picos principales.}
+  \label{fig:exp1-mag-full}
 \end{figure}
-\subsubsection{Interpretación}
-% - Identificar picos, armónicos, banda ocupada, ruido.
-% - Comentar fase (linealidad, retardos, saltos 2\pi si los hay).
-% - Relacionar con ventana y \Delta f. Señalar limitaciones.
+
+La Figura~\ref{fig:exp1-mag-mid} permite distinguir el lóbulo principal de la ventana en torno a la fundamental y la estructura de lóbulos laterales. Con Hann, el primer lóbulo lateral aparece notablemente atenuado y decrece, lo que explica que el espectro fuera de la vecindad tonal permanezca bajo y estable \cite{Harris1978Windows}. El ensanchamiento del lóbulo principal observado es el comportamiento esperado de una transformada de duración finita: cuanto mayor sea \(N_{\text{base}}\), más estrecho resultará el lóbulo y mejor la separabilidad de componentes cercanas \cite{OppenheimSchaferDTSP3e}. 
+% ===== Figura 3 =====
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.98\linewidth]{Media/Figura3.png}
+  \caption{Espectro de magnitud con zoom intermedio \((60\)–\(650\) Hz). Se aprecia con mayor detalle la zona tonal y los lóbulos laterales asociados al uso de la ventana de Hann.}
+  \label{fig:exp1-mag-mid}
+\end{figure}
+
+En la Figura~\ref{fig:exp1-mag-zoom} se resolvió el doblete alrededor de \(261\) Hz. En la corrida mostrada, la consola reportó picos en \(f\approx 261.6\) Hz y \(f\approx 261.8\) Hz, con una separación \(\Delta f\) medida del orden de \(0.15\)–\(0.20\) Hz. Esta separación concuerda con la predicción para un intervalo de un cent alrededor de \(f_0\) (\(\Delta f_{\text{cent}} \approx f_0(2^{1/1200}-1)\)), que para \(f_0\approx 261\) Hz vale ≈\(0.15\) Hz \cite{OsgoodFTAMS2019}. La capacidad de distinguir ambas líneas está limitada por la resolución física \(\Delta f=f_s/N_{\text{base}}\); el \emph{zero padding} solo densifica la rejilla de muestreo frecuencial y mejora la lectura, pero no reduce el ancho efectivo del lóbulo ni aumenta la verdadera resolución \cite{OppenheimSchaferDTSP3e,Harris1978Windows}.
+
+% ===== Figura 4 =====
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.98\linewidth]{Media/Figura4.png}
+  \caption{Espectro de magnitud con zoom alrededor de \(261\) Hz. Se observan dos picos muy cercanos (por ejemplo, \(261.6\) Hz y \(261.8\) Hz), con separación aproximada de \(0.15\)–\(0.20\) Hz, coherente con un intervalo de un cent. El \emph{zero padding} densifica la rejilla de lectura, pero la resolución física viene dada por \(\Delta f=f_s/N_{\text{base}}\).}
+  \label{fig:exp1-mag-zoom}
+\end{figure}
+
+La Figura~\ref{fig:exp1-phase} exhibe una pendiente global aproximadamente lineal de la fase con la frecuencia. Este comportamiento es característico de un desplazamiento temporal del segmento analizado: un corrimiento en tiempo introduce una rotación lineal de fase en el dominio de la frecuencia \cite{OppenheimSchaferDTSP3e,VetterliKovacevicGoyalFSP2014}. Al hacer zoom en la vecindad de las líneas alrededor de \(261\) Hz, la fase desenrollada se mantiene suave y coherente con componentes casi sinusoidales; las variaciones abruptas alejadas de las líneas se asocian a bajo nivel de señal y a los efectos del ventaneo \cite{OppenheimSchaferDTSP3e}.
+% ===== Figura 5 =====
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=0.98\linewidth]{Media/Figura5.png}
+  \caption{Espectro de fase desenrollada. A escala ancha aparece una pendiente global asociada al origen temporal del segmento; localmente, en torno a las líneas de \(261\) Hz, la fase muestra un comportamiento suave característico de tonos casi puros.}
+  \label{fig:exp1-phase}
+\end{figure}  
+
+En conjunto, los resultados confirman la relación tiempo–frecuencia esperada: la envolvente de batido en el dominio temporal y el doblete en el dominio frecuencial son dos manifestaciones del mismo fenómeno físico-matemático. La configuración empleada (Hann, \(N_{\text{base}}=912{,}712\), \(\Delta f=0.0483\) Hz) resulta suficiente para identificar el par de líneas cercanas, y la lectura es consistente con el intervalo de un cent alrededor de \(261\) Hz \cite{OppenheimSchaferDTSP3e,Harris1978Windows}.
+
+
 
 % =========================
 \section{Uso de Fourier en modulación y demodulación}
