--- a/Documentación/referencias.bib
+++ b/Documentación/referencias.bib
@@ -81,3 +81,55 @@
   url     = {https://numpy.org/doc/2.1/reference/routines.fft.html},
 
 }
+
+@book{McCune2010,
+  author    = {Earl McCune},
+  title     = {Practical Digital Wireless Signals},
+  year      = {2010},
+  publisher = {Cambridge University Press},
+  address   = {Cambridge, UK},
+  isbn      = {978-0-521-51630-3},
+  note      = {Hardback}
+}
+
+
+@misc{Ktims2006,
+author       = {Ktims},
+title        = {Example demonstrating binary FSK},
+year         = {2006},
+month        = {March},
+howpublished = {Own work created in Inkscape using graphs from gnuplot},
+url          = {https://commons.wikimedia.org/wiki/File:Binary_FSK.svg},
+language     = {English and Russian}
+}
+
+@misc{Condes2024_CMSIS_DSP,
+author       = {Enrique Condes},
+title        = {CMSIS-DSP, version 2.0.4},
+year         = {2024},
+month        = {November},
+howpublished = {\url{https://arm-software.github.io/CMSIS_5/DSP/html/index.html}},
+note         = {GNU General Public License v3.0}
+}
+
+@misc{ArduinoFFT_docs,
+title        = {ArduinoFFT Library Documentation},
+howpublished = {\url{https://docs.arduino.cc/libraries/arduinofft/}},
+year         = {2024},
+month        = {November},
+note         = {Access via GNU GPL v3.0 (as per CMSIS reference context)}
+}
+
+@misc{Microchip_MPLAB_Harmony,
+title        = {MPLAB Harmony: Embedded Software Development Framework for 32-bit Microcontrollers and Microprocessors},
+howpublished = {\url{https://www.microchip.com/en-us/tools-resources/configure/mplab-harmony}},
+note         = {Microchip Technology}
+}
+
+@misc{TI_MSPDSPLIB,
+title        = {MSP-DSPLIB: Digital Signal Processing Library for MSP430 Microcontrollers},
+howpublished = {\url{https://www.ti.com/tool/MSP-DSPLIB}},
+note         = {Texas Instruments}
+}
+
+
